# EINN_Forecasting

./: .env  .gitignore  README.md  covid_analysis.py  econ_informed_neural_network_presentation.pptx  main.py  pyproject.toml
data/raw_data/: fred_macro_monthly.csv  fred_series_manifest.csv
src/: ar1.py  backtesting.py  base_nn.py  config.py  einn.py  evaluation.py  lasso.py  logging_utils.py  pull_fred_data.py  transformations.py  utils.py  var.py  visualisations.py
src/models/: ar1.py  base_nn.py  einn.py  lasso.py  var.py
tests/: test_ar1.py  test_backtesting.py  test_base_nn.py  test_einn.py  test_evaluation.py  test_interpolation.py  test_lasso.py  test_transformations.py  test_var.py  test_visualisations.py
