[project]
name = "econ622-fred"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.6",
    "fredapi>=0.5.2",
    "jax>=0.10.0",
    "kaleido>=0.2.1",
    "pandas==3.0.2",
    "plotly>=5.0.0",
    "python-dotenv>=1.2.2",
    "statsmodels>=0.14.6",
]
